name:                multihash
version:             0.1.3
synopsis:            Multihash library and CLI executable
description:         Multihash is a protocol for encoding the hash algorithm
                     and digest length at the start of the digest.
                     More information available at the official
                     <https://github.com/jbenet/multihash/ multihash github>.
                     .
                     Base32 encoding and file checking still to be added.
                     .
license:             BSD3
license-file:        LICENSE
author:              Luke Hoersten
maintainer:          luke@hoersten.org
copyright:           2015 Luke Hoersten
category:            Data
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/LukeHoersten/multihash

source-repository head
  type: git
  location: git://github.com/LukeHoersten/multihash.git


library
  exposed-modules: Data.Multihash.Base
                 , Data.Multihash.Digest
                 , System.IO.Streams.Crypto

  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends: attoparsec        >= 0.12 && < 0.14
               , base              >= 4.7  && < 5.0
               -- , base32-bytestring >= 0.2  && < 0.3
               , base58-bytestring >= 0.1  && < 0.2
               , base64-bytestring >= 1.0  && < 1.1
               , bytestring        >= 0.10 && < 0.11
               , cryptonite        >= 0.24 && < 0.25
               , hex               >= 0.1  && < 0.2
               , io-streams        >= 1.2  && < 1.6


executable multihash
  main-is:           Main.hs
  hs-source-dirs:    main
  default-language:  Haskell2010
  ghc-options:       -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fdicts-cheap
                     -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts

  build-depends: base                 >= 4.7  && < 5.0
               -- , base32-bytestring >= 0.2
               , base64-bytestring    >= 1.0  && < 1.1
               , base58-bytestring    >= 0.1  && < 0.2
               , byteable             >= 0.1  && < 0.2
               , bytestring           >= 0.10 && < 0.11
               , cryptonite           >= 0.24 && < 0.25
               , hex                  >= 0.1  && < 0.2
               , io-streams           >= 1.2  && < 1.6
               , multihash            >= 0.1  && < 0.2
               , optparse-applicative >= 0.11 && < 0.15
               , memory               >= 0.14.11 && < 0.15.0
